--- a/frontend_wall/pool_base.html
+++ b/frontend_wall/pool_base.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Message Wall</title>
-        {% load staticfiles %}
-        <link rel="shortcut icon" href="{% static 'img/favicon.ico'  %}" />
-        <link rel = 'stylesheet' href="{% static 'css/message_style.css' %}" type="text/css"/>
-        <link rel = 'stylesheet' href="{% static 'css/top_bar.css' %}" type="text/css"/>
-        <link rel = 'stylesheet' href="{% static 'css/bootstrap.css' %}" type="text/css"/>
-        <script  src="{% static 'js/jquery-3.2.1.min.js' %}" type = 'text/javascript'> </script>
-        <script  src="{% static 'js/bootstrap.min.js' %}" type = 'text/javascript'> </script>
+        <link rel="shortcut icon" href='img/favicon.ico' />
+        <link rel = 'stylesheet' href='css/message_style.css' type="text/css"/>
+        <link rel = 'stylesheet' href='css/top_bar.css' type="text/css"/>
+        <link rel = 'stylesheet' href='css/bootstrap.css' type="text/css"/>
+        <script  src= 'js/jquery-3.2.1.min.js' type = 'text/javascript'> </script>
+        <script  src= 'js/bootstrap.min.js' type = 'text/javascript'> </script>
+	<script  src= 'js/index.js' type = 'text/javascript'> </script>
     </head>
 
     <body>
@@ -32,7 +32,6 @@
 
         <div id="id01" class="modal">
           <form class="modal-content animate" method="post" action="/login/">
-             {% csrf_token %}
             <div class="imgcontainer">
               <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
               <img src="img_avatar2.png" alt="Avatar" class="avatar">
@@ -40,12 +39,12 @@
 
             <div class="form">
               <label><b>Username</b></label>
-              <input type="text" placeholder="Enter Username" name="uname" required>
+              <input type="text" placeholder="Enter Username" id="username_login" name="username" required>
 
               <label><b>Password</b></label>
-              <input type="password" placeholder="Enter Password" name="psw" required>
+              <input type="password" placeholder="Enter Password" id="password_login" name="password" required>
 
-              <button type="submit">Login</button>
+              <input type="button" id="login">Login</button>
               <input type="checkbox" checked="checked"> Remember me
             </div>
 
@@ -56,13 +55,18 @@
           </form>
         </div>
         <div id="id02" class="modal">
-          <form class="modal-content animate" method="post" action="/register">
-             {% csrf_token %}
+          <form class="modal-content animate" method="post" action="#">
 
             <div class="form">
-              {{ form }}
-              <button type="submit">Register</button>
-
+		        <label>Username :</label>
+				<input type="text" name="dname" id="username">
+				<label>Email :</label>
+				<input type="text" name="demail" id="email">
+				<label>Password :</label>
+				<input type="password" name="password" id="password">
+				<label>Confirm Password :</label>
+				<input type="password" name="cpassword" id="cpassword">
+                <input type="button" id="register" value="Register" >
             </div>
           </form>
         </div>
