--- a/frontend_wall/index.html
+++ b/frontend_wall/index.html
@@ -7,11 +7,16 @@
         <link rel = 'stylesheet' href='css/message_style.css' type="text/css"/>
         <link rel = 'stylesheet' href='css/top_bar.css' type="text/css"/>
         <link rel = 'stylesheet' href='css/bootstrap.css' type="text/css"/>
+	<link rel = 'stylesheet' href='css/bootstrap-dialog.css' type="text/css"/>
+
         <script  src= 'js/jquery-3.2.1.min.js' type = 'text/javascript'> </script>
         <script  src= 'js/bootstrap.min.js' type = 'text/javascript'> </script>
+	<script  src= 'js/bootstrap-dialog.js' type = 'text/javascript'> </script>
         <script  src="js/jquery.cookies.2.2.0.js" type="text/javascript"></script>
 		<script  src="js/jquery.Storage.js" type="text/javascript"></script>
 	<script  src= 'js/index.js' type = 'text/javascript'> </script>
+
+	
     </head>
 
     <body>
