frontend is updated to react

--- a/frontend_wall/index.html
+++ b/frontend_wall/index.html
@@ -21,8 +21,7 @@
 
     <body>
 	
-        <div id="id01" class="modal">
-          <form class="modal-content animate" >
+
             <div class="imgcontainer">
               <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
               <p1 style="font-size:16pt; color=grey"> Login </p1>
@@ -38,7 +37,7 @@
             </div>
 
             <div class="form" style="background-color:#f1f1f1">
-              <button type="button" id="login" style="color:white" class="confirmbtn">Login</button>
+              <button type="submit" id="login" style="color:white" class="confirmbtn">Login</button>
             </div>
           </form>
         </div>
